WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
294833
[EME][GStreamer][Thunder] Fix crash with garbage collected CDMInstance
https://bugs.webkit.org/show_bug.cgi?id=294833
Summary
[EME][GStreamer][Thunder] Fix crash with garbage collected CDMInstance
Xabier Rodríguez Calvar
Reported
2025-06-23 04:13:42 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Xabier Rodríguez Calvar
Comment 1
2025-06-23 06:50:02 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/47057
EWS
Comment 2
2025-06-25 00:57:05 PDT
Committed
296608@main
(3cd5b617ea43): <
https://commits.webkit.org/296608@main
> Reviewed commits have been landed. Closing PR #47057 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-06-25 01:06:03 PDT
<
rdar://problem/154271401
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug