[EME][GStreamer][Thunder] Fix crash with garbage collected CDMInstance https://bugs.webkit.org/show_bug.cgi?id=294833

Reviewed by Philippe Normand.

There was a crash in certain situations where the CDMInstance got garbage collected, which made it crash as there was no
valid object. Now we just bail out and warn.

* Source/WebCore/platform/graphics/gstreamer/eme/CDMThunder.cpp:
(WebCore::CDMInstanceSessionThunder::requestLicense):

Canonical link: https://commits.webkit.org/296608@main